[package]
name = "ipfs-api"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT"
repository = "https://github.com/dignifiedquire/rust-ipfs-api.git"

[dependencies]
serde = "^0.8.0"
serde_json = "^0.8.0"
serde_derive = "^0.8.0"
hyper = "^0.9.0"
url = "1.2.3"

[dependencies.clippy]
optional = true
version = "*"

[features]
default = []
dev = ["clippy"]